--- a/tamil-food-app/src/assets/styles/Hero.scss
+++ b/tamil-food-app/src/assets/styles/Hero.scss
@@ -272,3 +272,15 @@ $yellow-color: #FFD40D;
      
   }
 }
+
+:where(.css-dev-only-do-not-override-dbp7pc).ant-carousel .slick-dots li.slick-active::after{
+  display: none  !important;
+}
+:where(.css-dbp7pc).ant-carousel .slick-dots li::after {
+    :where(.css-dbp7pc).ant-carousel .slick-dots li::after {
+      display: none !important;
+    }
+}
+:where(.css-dbp7pc).ant-carousel .slick-dots li.slick-active::after {
+  display: none !important;
+}
